@startuml Der


entity consumidor { 
    *id         : INT          NOT NULL <<PK>>
    --
    *pk_medidor : INT          NOT NULL <<FK>>
    *pk_taxa    : INT          NOT NULL <<FK>>
    *nome       : VARCHAR(50)  NOT NULL
    *endereco   : VARCHAR(100) NOT NULL 
    *tipo       : CHAR         NOT NULL 
}

entity taxa {
    *id             : INT          NOT NULL <<PK>>
    --
    *numero         : INT          NOT NULL
    *descricao      : VARCHAR(300)     NULL
    *valor_fixo     : FLOAT        NOT NULL
    *limite_consumo : FLOAT        NOT NULL
    *valor_variavel : FLOAT        NOT NULL
}

entity medidor {
    *id       : INT         NOT NULL <<PK>>
    --
    *numero   : INT         NOT NULL
    *endereço : VARCHAR(50) NOT NULL
    *tamanho  : FLOAT       NOT NULL
    *modelo   : VARCHAR(50) NOT NULL
}

entity leitura {
    *id             : INT  NOT NULL <<PK>>
    --
    *Numero         : INT  NOT NULL
    *pk_funcionario : INT  NOT NULL <<FK>>
    *pk_medidor     : INT  NOT NULL <<FK>>
    *data           : DATE NOT NULL
    *consumo        : DOUBLE   NULL
}

entity conta {
    *id            : INT    NOT NULL <<PK>>
    --
    *numero        : INT    NOT NULL
    *pk_medidor    : INT    NOT NULL <<FK>>
    *pk_consumidor : INT    NOT NULL <<FK>>
    *leitura       : DOUBLE NOT NULL
    *elaboracao    : DATE   NOT NULL
    *prazo         : DATE   NOT NULL
    *periodo       : DATE   NOT NULL
    *consumo       : DOUBLE NOT NULL
    *valor         : FLOAT  NOT NULL
}

entity funcionario {
    *id     : INT NOT NULL <<PK>> 
    --
    *numero : INT NOT NULL 
}

entity cidade {
    *id   : INT        NOT NULL <<PK>>
    --
    *nome : INT        NOT NULL 
    *uf   : VARCHAR(2) NOT NULL
}

entity endereco{
    *id               : INT          NOT NULL <<PK>>
    --
    *pk_consumidor    : INT          NOT NULL <<FK>>
    *pk_cidade        : INT          NOT NULL <<FK>>
    *logradouro       : VARCHAR(100) NOT NULL
    *cep              : CHAR(8)      NOT NULL
    *numero           : VARCHAR(5)       NULL
    *sem_numero       : BOOLEAN      NOT NULL
    *bairro           : VARCHAR(50)  NOT NULL
    *tipo             : CHAR         NOT NULL
    *complemento      : VARCHAR(50)      NULL
    *ponto_referencia : VARCHAR(50)      NULL
}

consumidor  ||--o{ medidor
consumidor  ||--o{ conta
conta       ||--|| leitura
funcionario ||--o{ leitura
taxa        ||--|{ consumidor
medidor     ||--o{ leitura
cidade      ||--|{ endereco
endereco    }|--|| consumidor


@enduml